# hardware-model

./: .gitignore  Makefile  README.md  models.py  pyproject.toml  python  schemas.py  setup.cfg
src/: settings.py
src/alg/: access_db.py  chat.py  client.py  gpt_call.py  hide_error.py  load_character.py  load_user_info.py  openai_call.py  play_background_music.py  settings.py  speech_call.py  speech_recognition_call.py  speech_to_speech_roop.py  test_sr.py  test_sts.py  test_stt.py
src/alg/llm_answer/: answer.py
src/alg/llm_answer/prompt/: chat_answer_prompt.py  use_rag_prompt.py
src/alg/prompt/: text_to_text_prompt.py
src/api/: main.py
src/api/routers/: speech_to_text.py  test_to_speech.py  text_to_text.py
src/db/: access_db.py
src/hardware_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model/: gpt_call.py  speech_call.py  speech_recognition_call.py
src/test_code/: test_sr.py
