[project]
name = "hardware-model"
version = "0.1.0"
description = "nuigurumi project for Raspberry Pi 5"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.115.8",
    "faster-whisper==1.1.1",
    "numpy==2.2.3",
    "sounddevice==0.5.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

